--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   margin-top: 2rem;
 
-  gap: 5px;
+  gap: 0;
 
   /*  background-color: blue; */
 }
@@ -19,7 +19,7 @@
   /* background-color: aqua;*/
 }
 
-.cardProduct {
+/* .cardProduct {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -28,7 +28,7 @@
   margin: 0.2rem;
   border-radius: 5px;
   box-sizing: border-box;
-}
+} */
 /* 
 .mainCardImage {
   width: 200px;
